@@ -13,7 +13,6 @@ import org.springframework.web.bind.annotation.RestControllerAdvice;
 import java.util.LinkedHashMap;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
 @RestControllerAdvice
 public class GlobalExceptions {
@@ -24,7 +23,7 @@ public class GlobalExceptions {
                 .getFieldErrors()
                 .stream()
                 .map( error -> new ValidationError( error.getField(), error.getDefaultMessage() ) )
-                .collect( Collectors.toList() );
+                .toList();
 
         Map< String, Object > body = new LinkedHashMap<>();
         body.put( "message", "Erro de validação" );
@@ -41,7 +40,7 @@ public class GlobalExceptions {
                 .map( violation -> new ValidationError(
                         violation.getPropertyPath().toString(),
                         violation.getMessage() ) )
-                .collect( Collectors.toList() );
+                .toList();
 
         Map< String, Object > body = new LinkedHashMap<>();
         body.put( "message", "Erro de validação nos parâmetros da requisição" );
@@ -97,6 +96,16 @@ public class GlobalExceptions {
                 .status( HttpStatus.INTERNAL_SERVER_ERROR )
                 .body( Error.builder()
                         .message( "Erro interno no servidor. Tente novamente mais tarde." )
+                        .traceId( TraceContext.getTraceId() )
+                        .build() );
+    }
+
+    @ExceptionHandler( GuestRuntimeException.class )
+    public ResponseEntity< Error > handleGuestRuntime( GuestRuntimeException ex ) {
+        return ResponseEntity
+                .status( ex.getStatus() )
+                .body( Error.builder()
+                        .message( ex.getMessage() )
                         .traceId( TraceContext.getTraceId() )
                         .build() );
     }
